--- a/kitty.conf
+++ b/kitty.conf
@@ -10,7 +10,9 @@ bold_italic_font JetBrains Mono Bold Italic
 cursor_blink_interval 0
 window_padding_width 10
 hide_window_decorations yes
-remember_window_size  no
+remember_window_size  yes
 initial_window_width  1000
 initial_window_height 650
 enable_audio_bell no
+allow_hyperlinks yes
+mouse_map ctrl+left release grabbed,ungrabbed mouse_click_url
